[package]
name = "os"
crate-type = ["lib"]
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
sbi-rt = { version = "0.0.2", features = ["legacy"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
hashbrown = "0.14"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
easy-fs = { path = "../easy-fs" }
spin = "0.7.0"
volatile = "0.3"
embedded-graphics = "0.7.1"
tinybmp = "0.3.1"
lose-net-stack = { git = "https://github.com/yfblock/lose-net-stack", rev = "db42380" }